fixed header clipping

--- a/src/components/SneakerContainer/index.scss
+++ b/src/components/SneakerContainer/index.scss
@@ -6,7 +6,6 @@
   align-self: center;
   padding-left: 2%;
   cursor: pointer;
-  animation: fade-in 1s;
 
   .sneaker-link {
     color: black;
